# lab-3

./: .gitignore  Makefile  README.md  README_LCM.md  lcm_monitor.c  motion_detector.py  pyproject.toml
