[project]
name = "motion-detector"
version = "0.1.0"
description = "A simple Python project."
requires-python = ">=3.11,<3.13"
dependencies = [
    "opencv-python>=4.12.0.88",
    "mediapipe>=0.10.0",
    "lcm>=1.5.1"
]

[project.optional-dependencies]
dev = ["ruff"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
